Делаю replice-paintings

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <img src="./images/replica-paintings/bird.png" alt="Птица">
                     </div>
                     <div class="replica-paintings__content">
-                        <h1 class="replica-paintings_title">Реплики картин от<span>Ink. House</span></h1>
+                        <h1 class="replica-paintings__title">Реплики картин от <span>Ink. House</span></h1>
                         <p class="replica-paintings__text">Высокое качество отрисовки на плотной бумаге или льняном холсте. Редкие произведения, доступные цены.</p>
-                        <button class="replica-paintings__btn">Продукция</button>
+                        <button class="replica-paintings__btn">Продукция!!!!!!</button>
                     </div>
                 </div>
             </section>
