сделал блок reproductions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </p>
 
               <div>
-                <button class="replica-paintings__btn">Продукция!!!!!!</button>
+                <button class="replica-paintings__btn">Продукция</button>
               </div>
             </div>
           </div>
