сделал блок new-collection

--- a/index.html
+++ b/index.html
@@ -109,6 +109,20 @@
             </ul>
           </div>
         </section>
+
+        <section class="new-collection">
+          <div class="new-collection__container">
+            <div class="new-collection__title">
+              <img src="./images/new-collection/star.png" alt="Звезда">
+              <h2>Новая коллекция <br/> французских авторов</h2>
+            </div>
+            <div class="new-collection__text">
+              <p>Сложно сказать, почему акционеры крупнейших компаний призывают нас к новым свершениям, которые, в свою очередь, должны быть заблокированы в рамках своих собственных рациональных ограничений. </p>
+              <p>Принимая во внимание показатели успешности, граница обучения кадров предопределяет высокую востребованность направлений прогрессивного развития.</p>
+            </div>
+            <button class="new-collection__btn">Ознакомиться</button>
+          </div>
+        </section>
       </main>
     </div>
   </body>
