Сделал блок team

--- a/index.html
+++ b/index.html
@@ -123,6 +123,25 @@
             <button class="new-collection__btn">Ознакомиться</button>
           </div>
         </section>
+
+        <section class="team">
+          <div class="team__container">
+            <div class="team__painting">
+              <img src="/images/team/painting.png" alt="Картина">
+            </div>
+            <div class="team__information">
+              <h2 class="team__title">Наша команда</h2>
+              <p class="team__text">
+                Значимость этих проблем настолько очевидна, что базовый вектор развития позволяет оценить значение экспериментов, поражающих по своей масштабности и грандиозности. Мы вынуждены отталкиваться от того, что консультация с широким активом.
+              </p>
+              <ul class="team__list">
+                <li class="team__item"><img src="/images/team/Ellipse30.png" alt="1 человек"></li>
+                <li class="team__item"><img src="/images/team/Ellipse31.png" alt="2 человек"></li>
+                <li class="team__item"><img src="/images/team/Ellipse32.png" alt="3 человек"></li>
+            </ul>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
