Реализована часть вёрстки блока footer

--- a/index.html
+++ b/index.html
@@ -142,6 +142,51 @@
             </div>
           </div>
         </section>
+
+        <section class="footer">
+          <div class="footer__container">
+            
+            <div class="footer__logo">
+              <img src="/images/header/logo.png" alt="Logo">
+            </div>
+
+            <div class="footer__extra-inf extra-inf">
+              <ul class="extra-inf__menu">
+                <li class="extra-inf__header">+7 (999) 543-54-54</li>
+                <li class="extra-inf__item">Мастерская</li>
+              </ul>
+              <ul class="extra-inf__menu">
+                <li class="extra-inf__header">Репродукции</li>
+                <li class="extra-inf__item">Франция</li>
+                <li class="extra-inf__item">Германия</li>
+                <li class="extra-inf__item">Англия</li>
+              </ul>
+              <ul class="extra-inf__menu">
+                <li class="extra-inf__header">Новинки</li>
+                <li class="extra-inf__item">2021</li>
+                <li class="extra-inf__item">2020</li>
+              </ul>
+              <ul class="extra-inf__menu">
+                <li class="extra-inf__header">О нас</li>
+                <li class="extra-inf__item">Художники</li>
+                <li class="extra-inf__item">Менеджеры</li>
+              </ul>
+            </div>
+
+            <!-- <div class="footer__social-media">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+              <ul>
+                <li></li>
+                <li></li>
+              </ul>
+            </div> дописать эту структуру, когда вспомню svg спрайты-->
+           
+          </div>
+        </section>
       </main>
     </div>
   </body>
