Внёс правки для отображение картинок при деплое

--- a/index.html
+++ b/index.html
@@ -113,12 +113,21 @@
         <section class="new-collection">
           <div class="new-collection__container">
             <div class="new-collection__title">
-              <img src="./images/new-collection/star.png" alt="Звезда">
-              <h2>Новая коллекция <br/> французских авторов</h2>
+              <img src="./images/new-collection/star.png" alt="Звезда" />
+              <h2>
+                Новая коллекция <br />
+                французских авторов
+              </h2>
             </div>
             <div class="new-collection__text">
-              <p>Сложно сказать, почему акционеры крупнейших компаний призывают нас к новым свершениям, которые, в свою очередь, должны быть заблокированы в рамках своих собственных рациональных ограничений. </p>
-              <p>Принимая во внимание показатели успешности, граница обучения кадров предопределяет высокую востребованность направлений прогрессивного развития.</p>
+              <p>
+                Сложно сказать, почему акционеры крупнейших компаний призывают нас к новым свершениям, которые, в свою
+                очередь, должны быть заблокированы в рамках своих собственных рациональных ограничений.
+              </p>
+              <p>
+                Принимая во внимание показатели успешности, граница обучения кадров предопределяет высокую
+                востребованность направлений прогрессивного развития.
+              </p>
             </div>
             <button class="new-collection__btn">Ознакомиться</button>
           </div>
@@ -127,27 +136,28 @@
         <section class="team">
           <div class="team__container">
             <div class="team__painting">
-              <img src="/images/team/painting.png" alt="Картина">
+              <img src="./images/team/painting.png" alt="Картина" />
             </div>
             <div class="team__information">
               <h2 class="team__title">Наша команда</h2>
               <p class="team__text">
-                Значимость этих проблем настолько очевидна, что базовый вектор развития позволяет оценить значение экспериментов, поражающих по своей масштабности и грандиозности. Мы вынуждены отталкиваться от того, что консультация с широким активом.
+                Значимость этих проблем настолько очевидна, что базовый вектор развития позволяет оценить значение
+                экспериментов, поражающих по своей масштабности и грандиозности. Мы вынуждены отталкиваться от того, что
+                консультация с широким активом.
               </p>
               <ul class="team__list">
-                <li class="team__item"><img src="/images/team/Ellipse30.png" alt="1 человек"></li>
-                <li class="team__item"><img src="/images/team/Ellipse31.png" alt="2 человек"></li>
-                <li class="team__item"><img src="/images/team/Ellipse32.png" alt="3 человек"></li>
-            </ul>
+                <li class="team__item"><img src="./images/team/Ellipse30.png" alt="1 человек" /></li>
+                <li class="team__item"><img src="./images/team/Ellipse31.png" alt="2 человек" /></li>
+                <li class="team__item"><img src="./images/team/Ellipse32.png" alt="3 человек" /></li>
+              </ul>
             </div>
           </div>
         </section>
 
         <section class="footer">
           <div class="footer__container">
-            
             <div class="footer__logo">
-              <img src="/images/header/logo.png" alt="Logo">
+              <img src="./images/header/logo.png" alt="Logo" />
             </div>
 
             <div class="footer__extra-inf extra-inf">
@@ -184,7 +194,6 @@
                 <li></li>
               </ul>
             </div> дописать эту структуру, когда вспомню svg спрайты-->
-           
           </div>
         </section>
       </main>
